--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,4 @@
 eureka:
-  serviceUrl:
-    defaultZone: http://localhost:9091
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:9091
