--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,4 @@
 eureka:
-  serviceUrl:
-    defaultZone: http://helppoint_discovery_server:9091
+  client:
+    serviceUrl:
+      defaultZone: http://helppoint_discovery_server:9091
