--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,4 +1,8 @@
 eureka:
   client:
-    serviceUrl:
-      defaultZone: http://helppoint_discovery_server:9091
+    registerWithEureka: false
+    fetchRegistry: false
+  server:
+    waitTimeInMsWhenSyncEmpty: 0
+  serviceUrl:
+    defaultZone: http://helppoint_discovery_server:8761
