--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 eureka:
+  instance:
+    hostname: helppoint_discovery_server
   client:
     registerWithEureka: false
     fetchRegistry: false
-  server:
-    waitTimeInMsWhenSyncEmpty: 0
-  serviceUrl:
-    defaultZone: http://helppoint_discovery_server:8761
+    serviceUrl:
+      defaultZone: http://helppoint_discovery_server:8761/eureka/
